regression/parse_pool/libtest4.sfp.out

sfc in library parse_pool/libtest4.sfl
syntax error at line 3, position 0:

^
