regression/parse_pool/libtest4.sfl
# Testing erroneous library definition 
use application blink $(FENNEC_FOX_LIB)/Application/SimpleBlink
